--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -18,5 +18,8 @@
         android:id="@+id/studentDetailFragment"
         android:name="com.ubaya.advweek4.View.StudentDetailFragment"
         android:label="fragment_student_detail"
-        tools:layout="@layout/fragment_student_detail" />
+        tools:layout="@layout/fragment_student_detail" >
+        <argument android:name="stuPost"
+            app:argType="string" />
+    </fragment>
 </navigation>
